// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-26 {
  min-height: 100vh;
}

.emotion-6 {
  background-color: var(--bb-palette-background,#000000);
  height: 100vh;
  min-width: 320px;
  width: 320px;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  border-right: 1px solid var(--bb-palette-white800,#000000);
}

.emotion-19 {
  position: fixed;
  z-index: 999999;
  overflow-y: scroll;
}

.emotion-19::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-19 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

@media screen and (max-width:1023px) {
  .emotion-19 {
    display: none;
  }
}

.emotion-3.emotion-3.emotion-3 {
  min-width: 320px;
  overflow-y: scroll;
}

.emotion-3.emotion-3.emotion-3::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-3.emotion-3.emotion-3 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

@media screen and (min-width:1024px) {
  .emotion-3 {
    display: none;
  }
}

.emotion-25 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

@media screen and (max-width:1023px) {
  .emotion-25 {
    padding-left: 0px;
  }
}

.emotion-8 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px,-50%,0px);
  -ms-transform: translate3d(0px,-50%,0px);
  transform: translate3d(0px,-50%,0px);
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition-property: -webkit-transform,opacity;
  -webkit-transition-property: transform,opacity;
  transition-property: transform,opacity;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  -webkit-transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  -ms-transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  opacity: 0;
}

@media screen and (max-width:320px) {
  .emotion-8 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-8[data-enter] {
  -webkit-transform: translate3d(0px,-50%,0px) scale(1) !important;
  -ms-transform: translate3d(0px,-50%,0px) scale(1) !important;
  transform: translate3d(0px,-50%,0px) scale(1) !important;
  opacity: 1;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-8 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.emotion-7 {
  box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.15),0px 0px 6px 3px rgba(0,0,0,0.02);
}

.emotion-7.emotion-7 {
  position: fixed;
  background-color: var(--bb-palette-background,#000000);
  left: 0;
  height: 100vh;
}

.emotion-0 {
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition-property: -webkit-transform,opacity;
  -webkit-transition-property: transform,opacity;
  transition-property: transform,opacity;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  -webkit-transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  -ms-transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  opacity: 0;
}

.emotion-0[data-enter] {
  -webkit-transform: translate3d(undefined,undefined,0px) scale(1) !important;
  -ms-transform: translate3d(undefined,undefined,0px) scale(1) !important;
  transform: translate3d(undefined,undefined,0px) scale(1) !important;
  opacity: 1;
}

.emotion-28 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-26 emotion-1 emotion-28 test bb-Box bb-PageWithSidebar"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    <div
      class="emotion-7 emotion-8 emotion-1 emotion-2 emotion-3 bb-PageWithSidebarSidebarCollapsedWrapper bb-Box bb-Modal bb-Drawer"
      data-dialog="true"
      hidden=""
      id="bb-id-1"
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 emotion-3 bb-PageWithSidebarSidebarCollapsedWrapper bb-Box bb-ModalBackdrop"
        data-dialog-ref="bb-id-1"
        hidden=""
        style="display: none;"
      >
        <div />
      </div>
      <div
        class="emotion-1 emotion-2 emotion-6 bb-PageWithSidebarSidebar bb-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-20 emotion-1 emotion-2 bb-Box bb-DisclosureContent"
    id="test"
  >
    <div
      class="emotion-1 emotion-2 emotion-19 bb-PageWithSidebarSidebarExpandedWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-2 emotion-6 bb-PageWithSidebarSidebar bb-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-25 bb-PageWithSidebarContent bb-Box"
  >
    hello world
  </div>
</div>
`;

exports[`overrides styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  background-color: var(--bb-palette-background,#000000);
  height: 100vh;
  min-width: 320px;
  width: 320px;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  border-right: 1px solid var(--bb-palette-white800,#000000);
}

.emotion-19 {
  position: fixed;
  z-index: 999999;
  overflow-y: scroll;
}

.emotion-19::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-19 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

@media screen and (max-width:1023px) {
  .emotion-19 {
    display: none;
  }
}

.emotion-3.emotion-3.emotion-3 {
  min-width: 320px;
  overflow-y: scroll;
}

.emotion-3.emotion-3.emotion-3::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-3.emotion-3.emotion-3 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

@media screen and (min-width:1024px) {
  .emotion-3 {
    display: none;
  }
}

.emotion-25 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

@media screen and (max-width:1023px) {
  .emotion-25 {
    padding-left: 0px;
  }
}

.emotion-8 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px,-50%,0px);
  -ms-transform: translate3d(0px,-50%,0px);
  transform: translate3d(0px,-50%,0px);
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition-property: -webkit-transform,opacity;
  -webkit-transition-property: transform,opacity;
  transition-property: transform,opacity;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  -webkit-transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  -ms-transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  opacity: 0;
}

@media screen and (max-width:320px) {
  .emotion-8 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-8[data-enter] {
  -webkit-transform: translate3d(0px,-50%,0px) scale(1) !important;
  -ms-transform: translate3d(0px,-50%,0px) scale(1) !important;
  transform: translate3d(0px,-50%,0px) scale(1) !important;
  opacity: 1;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-8 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.emotion-7 {
  box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.15),0px 0px 6px 3px rgba(0,0,0,0.02);
}

.emotion-7.emotion-7 {
  position: fixed;
  background-color: var(--bb-palette-background,#000000);
  left: 0;
  height: 100vh;
}

.emotion-0 {
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition-property: -webkit-transform,opacity;
  -webkit-transition-property: transform,opacity;
  transition-property: transform,opacity;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  -webkit-transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  -ms-transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  opacity: 0;
}

.emotion-0[data-enter] {
  -webkit-transform: translate3d(undefined,undefined,0px) scale(1) !important;
  -ms-transform: translate3d(undefined,undefined,0px) scale(1) !important;
  transform: translate3d(undefined,undefined,0px) scale(1) !important;
  opacity: 1;
}

.emotion-26 {
  min-height: 100vh;
}

.emotion-26 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-26 emotion-1 emotion-2 bb-Box bb-PageWithSidebar"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    <div
      class="emotion-7 emotion-8 emotion-1 emotion-2 emotion-3 bb-PageWithSidebarSidebarCollapsedWrapper bb-Box bb-Modal bb-Drawer"
      data-dialog="true"
      hidden=""
      id="bb-id-1"
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 emotion-3 bb-PageWithSidebarSidebarCollapsedWrapper bb-Box bb-ModalBackdrop"
        data-dialog-ref="bb-id-1"
        hidden=""
        style="display: none;"
      >
        <div />
      </div>
      <div
        class="emotion-1 emotion-2 emotion-6 bb-PageWithSidebarSidebar bb-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-20 emotion-1 emotion-2 bb-Box bb-DisclosureContent"
    id="test"
  >
    <div
      class="emotion-1 emotion-2 emotion-19 bb-PageWithSidebarSidebarExpandedWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-2 emotion-6 bb-PageWithSidebarSidebar bb-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-25 bb-PageWithSidebarContent bb-Box"
  >
    hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-26 {
  min-height: 100vh;
}

.emotion-6 {
  background-color: var(--bb-palette-background,#000000);
  height: 100vh;
  min-width: 320px;
  width: 320px;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  border-right: 1px solid var(--bb-palette-white800,#000000);
}

.emotion-19 {
  position: fixed;
  z-index: 999999;
  overflow-y: scroll;
}

.emotion-19::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-19 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

@media screen and (max-width:1023px) {
  .emotion-19 {
    display: none;
  }
}

.emotion-3.emotion-3.emotion-3 {
  min-width: 320px;
  overflow-y: scroll;
}

.emotion-3.emotion-3.emotion-3::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-3.emotion-3.emotion-3 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

@media screen and (min-width:1024px) {
  .emotion-3 {
    display: none;
  }
}

.emotion-25 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

@media screen and (max-width:1023px) {
  .emotion-25 {
    padding-left: 0px;
  }
}

.emotion-8 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px,-50%,0px);
  -ms-transform: translate3d(0px,-50%,0px);
  transform: translate3d(0px,-50%,0px);
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition-property: -webkit-transform,opacity;
  -webkit-transition-property: transform,opacity;
  transition-property: transform,opacity;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  -webkit-transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  -ms-transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  opacity: 0;
}

@media screen and (max-width:320px) {
  .emotion-8 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-8[data-enter] {
  -webkit-transform: translate3d(0px,-50%,0px) scale(1) !important;
  -ms-transform: translate3d(0px,-50%,0px) scale(1) !important;
  transform: translate3d(0px,-50%,0px) scale(1) !important;
  opacity: 1;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-8 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.emotion-7 {
  box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.15),0px 0px 6px 3px rgba(0,0,0,0.02);
}

.emotion-7.emotion-7 {
  position: fixed;
  background-color: var(--bb-palette-background,#000000);
  left: 0;
  height: 100vh;
}

.emotion-0 {
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition-property: -webkit-transform,opacity;
  -webkit-transition-property: transform,opacity;
  transition-property: transform,opacity;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  -webkit-transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  -ms-transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  opacity: 0;
}

.emotion-0[data-enter] {
  -webkit-transform: translate3d(undefined,undefined,0px) scale(1) !important;
  -ms-transform: translate3d(undefined,undefined,0px) scale(1) !important;
  transform: translate3d(undefined,undefined,0px) scale(1) !important;
  opacity: 1;
}

<div
  class="emotion-26 emotion-1 emotion-2 bb-Box bb-PageWithSidebar"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    <div
      class="emotion-7 emotion-8 emotion-1 emotion-2 emotion-3 bb-PageWithSidebarSidebarCollapsedWrapper bb-Box bb-Modal bb-Drawer"
      data-dialog="true"
      hidden=""
      id="bb-id-1"
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 emotion-3 bb-PageWithSidebarSidebarCollapsedWrapper bb-Box bb-ModalBackdrop"
        data-dialog-ref="bb-id-1"
        hidden=""
        style="display: none;"
      >
        <div />
      </div>
      <div
        class="emotion-1 emotion-2 emotion-6 bb-PageWithSidebarSidebar bb-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-20 emotion-1 emotion-2 bb-Box bb-DisclosureContent"
    id="test"
  >
    <div
      class="emotion-1 emotion-2 emotion-19 bb-PageWithSidebarSidebarExpandedWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-2 emotion-6 bb-PageWithSidebarSidebar bb-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-25 bb-PageWithSidebarContent bb-Box"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-26 {
  min-height: 100vh;
}

.emotion-6 {
  background-color: var(--bb-palette-background,#000000);
  height: 100vh;
  min-width: 320px;
  width: 320px;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  border-right: 1px solid var(--bb-palette-white800,#000000);
}

.emotion-19 {
  position: fixed;
  z-index: 999999;
  overflow-y: scroll;
}

.emotion-19::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-19 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

@media screen and (max-width:1023px) {
  .emotion-19 {
    display: none;
  }
}

.emotion-3.emotion-3.emotion-3 {
  min-width: 320px;
  overflow-y: scroll;
}

.emotion-3.emotion-3.emotion-3::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-3.emotion-3.emotion-3 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

@media screen and (min-width:1024px) {
  .emotion-3 {
    display: none;
  }
}

.emotion-25 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

@media screen and (max-width:1023px) {
  .emotion-25 {
    padding-left: 0px;
  }
}

.emotion-8 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px,-50%,0px);
  -ms-transform: translate3d(0px,-50%,0px);
  transform: translate3d(0px,-50%,0px);
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition-property: -webkit-transform,opacity;
  -webkit-transition-property: transform,opacity;
  transition-property: transform,opacity;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  -webkit-transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  -ms-transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  opacity: 0;
}

@media screen and (max-width:320px) {
  .emotion-8 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-8[data-enter] {
  -webkit-transform: translate3d(0px,-50%,0px) scale(1) !important;
  -ms-transform: translate3d(0px,-50%,0px) scale(1) !important;
  transform: translate3d(0px,-50%,0px) scale(1) !important;
  opacity: 1;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-8 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.emotion-7 {
  box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.15),0px 0px 6px 3px rgba(0,0,0,0.02);
}

.emotion-7.emotion-7 {
  position: fixed;
  background-color: var(--bb-palette-background,#000000);
  left: 0;
  height: 100vh;
}

.emotion-0 {
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition-property: -webkit-transform,opacity;
  -webkit-transition-property: transform,opacity;
  transition-property: transform,opacity;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  -webkit-transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  -ms-transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  opacity: 0;
}

.emotion-0[data-enter] {
  -webkit-transform: translate3d(undefined,undefined,0px) scale(1) !important;
  -ms-transform: translate3d(undefined,undefined,0px) scale(1) !important;
  transform: translate3d(undefined,undefined,0px) scale(1) !important;
  opacity: 1;
}

.emotion-28 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-26 emotion-1 emotion-28 bb-Box bb-PageWithSidebar"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    <div
      class="emotion-7 emotion-8 emotion-1 emotion-2 emotion-3 bb-PageWithSidebarSidebarCollapsedWrapper bb-Box bb-Modal bb-Drawer"
      data-dialog="true"
      hidden=""
      id="bb-id-1"
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 emotion-3 bb-PageWithSidebarSidebarCollapsedWrapper bb-Box bb-ModalBackdrop"
        data-dialog-ref="bb-id-1"
        hidden=""
        style="display: none;"
      >
        <div />
      </div>
      <div
        class="emotion-1 emotion-2 emotion-6 bb-PageWithSidebarSidebar bb-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-20 emotion-1 emotion-2 bb-Box bb-DisclosureContent"
    id="test"
  >
    <div
      class="emotion-1 emotion-2 emotion-19 bb-PageWithSidebarSidebarExpandedWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-2 emotion-6 bb-PageWithSidebarSidebar bb-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-25 bb-PageWithSidebarContent bb-Box"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with sidebarPlacement 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-26 {
  min-height: 100vh;
}

.emotion-3.emotion-3.emotion-3 {
  min-width: 320px;
  overflow-y: scroll;
}

.emotion-3.emotion-3.emotion-3::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-3.emotion-3.emotion-3 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

@media screen and (min-width:1024px) {
  .emotion-3 {
    display: none;
  }
}

.emotion-0 {
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition-property: -webkit-transform,opacity;
  -webkit-transition-property: transform,opacity;
  transition-property: transform,opacity;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  -webkit-transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  -ms-transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  opacity: 0;
}

.emotion-0[data-enter] {
  -webkit-transform: translate3d(undefined,undefined,0px) scale(1) !important;
  -ms-transform: translate3d(undefined,undefined,0px) scale(1) !important;
  transform: translate3d(undefined,undefined,0px) scale(1) !important;
  opacity: 1;
}

.emotion-6 {
  background-color: var(--bb-palette-background,#000000);
  height: 100vh;
  min-width: 320px;
  width: 320px;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  border-left: 1px solid var(--bb-palette-white800,#000000);
}

.emotion-19 {
  position: fixed;
  z-index: 999999;
  overflow-y: scroll;
  right: 0;
}

.emotion-19::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-19 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

@media screen and (max-width:1023px) {
  .emotion-19 {
    display: none;
  }
}

.emotion-25 {
  width: 100%;
  padding-right: 320px;
  padding-right: 0px;
}

@media screen and (max-width:1023px) {
  .emotion-25 {
    padding-right: 0px;
  }
}

.emotion-8 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  right: 1.25em;
  -webkit-transform: translate3d(0px,-50%,0px);
  -ms-transform: translate3d(0px,-50%,0px);
  transform: translate3d(0px,-50%,0px);
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition-property: -webkit-transform,opacity;
  -webkit-transition-property: transform,opacity;
  transition-property: transform,opacity;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  -webkit-transform: translate3d(calc(0px + 100%),calc(-50%),0px) !important;
  -ms-transform: translate3d(calc(0px + 100%),calc(-50%),0px) !important;
  transform: translate3d(calc(0px + 100%),calc(-50%),0px) !important;
  opacity: 0;
}

@media screen and (max-width:320px) {
  .emotion-8 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-8[data-enter] {
  -webkit-transform: translate3d(0px,-50%,0px) scale(1) !important;
  -ms-transform: translate3d(0px,-50%,0px) scale(1) !important;
  transform: translate3d(0px,-50%,0px) scale(1) !important;
  opacity: 1;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-8 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.emotion-7 {
  box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.15),0px 0px 6px 3px rgba(0,0,0,0.02);
}

.emotion-7.emotion-7 {
  position: fixed;
  background-color: var(--bb-palette-background,#000000);
  right: 0;
  height: 100vh;
}

<div
  class="emotion-26 emotion-1 emotion-2 bb-Box bb-PageWithSidebar"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    <div
      class="emotion-7 emotion-8 emotion-1 emotion-2 emotion-3 bb-PageWithSidebarSidebarCollapsedWrapper bb-Box bb-Modal bb-Drawer"
      data-dialog="true"
      hidden=""
      id="bb-id-1"
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 emotion-3 bb-PageWithSidebarSidebarCollapsedWrapper bb-Box bb-ModalBackdrop"
        data-dialog-ref="bb-id-1"
        hidden=""
        style="display: none;"
      >
        <div />
      </div>
      <div
        class="emotion-1 emotion-2 emotion-6 bb-PageWithSidebarSidebar bb-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-20 emotion-1 emotion-2 bb-Box bb-DisclosureContent"
    id="test"
  >
    <div
      class="emotion-1 emotion-2 emotion-19 bb-PageWithSidebarSidebarExpandedWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-2 emotion-6 bb-PageWithSidebarSidebar bb-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-25 bb-PageWithSidebarContent bb-Box"
  >
    Hello world
  </div>
</div>
`;

exports[`theming styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  background-color: var(--bb-palette-background,#000000);
  height: 100vh;
  min-width: 320px;
  width: 320px;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  border-right: 1px solid var(--bb-palette-white800,#000000);
}

.emotion-19 {
  position: fixed;
  z-index: 999999;
  overflow-y: scroll;
}

.emotion-19::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-19 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

@media screen and (max-width:1023px) {
  .emotion-19 {
    display: none;
  }
}

.emotion-3.emotion-3.emotion-3 {
  min-width: 320px;
  overflow-y: scroll;
}

.emotion-3.emotion-3.emotion-3::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-3.emotion-3.emotion-3 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

@media screen and (min-width:1024px) {
  .emotion-3 {
    display: none;
  }
}

.emotion-25 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

@media screen and (max-width:1023px) {
  .emotion-25 {
    padding-left: 0px;
  }
}

.emotion-8 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px,-50%,0px);
  -ms-transform: translate3d(0px,-50%,0px);
  transform: translate3d(0px,-50%,0px);
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition-property: -webkit-transform,opacity;
  -webkit-transition-property: transform,opacity;
  transition-property: transform,opacity;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  -webkit-transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  -ms-transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  opacity: 0;
}

@media screen and (max-width:320px) {
  .emotion-8 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-8[data-enter] {
  -webkit-transform: translate3d(0px,-50%,0px) scale(1) !important;
  -ms-transform: translate3d(0px,-50%,0px) scale(1) !important;
  transform: translate3d(0px,-50%,0px) scale(1) !important;
  opacity: 1;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-8 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.emotion-7 {
  box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.15),0px 0px 6px 3px rgba(0,0,0,0.02);
}

.emotion-7.emotion-7 {
  position: fixed;
  background-color: var(--bb-palette-background,#000000);
  left: 0;
  height: 100vh;
}

.emotion-0 {
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition-property: -webkit-transform,opacity;
  -webkit-transition-property: transform,opacity;
  transition-property: transform,opacity;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  -webkit-transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  -ms-transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  opacity: 0;
}

.emotion-0[data-enter] {
  -webkit-transform: translate3d(undefined,undefined,0px) scale(1) !important;
  -ms-transform: translate3d(undefined,undefined,0px) scale(1) !important;
  transform: translate3d(undefined,undefined,0px) scale(1) !important;
  opacity: 1;
}

.emotion-26 {
  min-height: 100vh;
}

.emotion-26 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-26 emotion-1 emotion-2 bb-Box bb-PageWithSidebar"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    <div
      class="emotion-7 emotion-8 emotion-1 emotion-2 emotion-3 bb-PageWithSidebarSidebarCollapsedWrapper bb-Box bb-Modal bb-Drawer"
      data-dialog="true"
      hidden=""
      id="bb-id-1"
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 emotion-3 bb-PageWithSidebarSidebarCollapsedWrapper bb-Box bb-ModalBackdrop"
        data-dialog-ref="bb-id-1"
        hidden=""
        style="display: none;"
      >
        <div />
      </div>
      <div
        class="emotion-1 emotion-2 emotion-6 bb-PageWithSidebarSidebar bb-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-20 emotion-1 emotion-2 bb-Box bb-DisclosureContent"
    id="test"
  >
    <div
      class="emotion-1 emotion-2 emotion-19 bb-PageWithSidebarSidebarExpandedWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-2 emotion-6 bb-PageWithSidebarSidebar bb-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-25 bb-PageWithSidebarContent bb-Box"
  >
    hello world
  </div>
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  background-color: var(--bb-palette-background,#000000);
  height: 100vh;
  min-width: 320px;
  width: 320px;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  border-right: 1px solid var(--bb-palette-white800,#000000);
}

.emotion-19 {
  position: fixed;
  z-index: 999999;
  overflow-y: scroll;
}

.emotion-19::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-19 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

@media screen and (max-width:1023px) {
  .emotion-19 {
    display: none;
  }
}

.emotion-3.emotion-3.emotion-3 {
  min-width: 320px;
  overflow-y: scroll;
}

.emotion-3.emotion-3.emotion-3::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-3.emotion-3.emotion-3 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

@media screen and (min-width:1024px) {
  .emotion-3 {
    display: none;
  }
}

.emotion-25 {
  width: 100%;
  padding-left: 320px;
  padding-left: 0px;
}

@media screen and (max-width:1023px) {
  .emotion-25 {
    padding-left: 0px;
  }
}

.emotion-8 {
  position: fixed;
  z-index: 19900410;
  min-width: 320px;
  top: 50%;
  left: 1.25em;
  -webkit-transform: translate3d(0px,-50%,0px);
  -ms-transform: translate3d(0px,-50%,0px);
  transform: translate3d(0px,-50%,0px);
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition-property: -webkit-transform,opacity;
  -webkit-transition-property: transform,opacity;
  transition-property: transform,opacity;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  -webkit-transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  -ms-transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  transform: translate3d(calc(0px - 100%),calc(-50%),0px) !important;
  opacity: 0;
}

@media screen and (max-width:320px) {
  .emotion-8 {
    min-width: unset;
    width: 100%;
  }
}

.emotion-8[data-enter] {
  -webkit-transform: translate3d(0px,-50%,0px) scale(1) !important;
  -ms-transform: translate3d(0px,-50%,0px) scale(1) !important;
  transform: translate3d(0px,-50%,0px) scale(1) !important;
  opacity: 1;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.emotion-8 {
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.emotion-7 {
  box-shadow: 0px 3px 12px 0px rgba(0,0,0,0.15),0px 0px 6px 3px rgba(0,0,0,0.02);
}

.emotion-7.emotion-7 {
  position: fixed;
  background-color: var(--bb-palette-background,#000000);
  left: 0;
  height: 100vh;
}

.emotion-0 {
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition-property: -webkit-transform,opacity;
  -webkit-transition-property: transform,opacity;
  transition-property: transform,opacity;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  -webkit-transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  -ms-transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  transform: translate3d(calc(undefined),calc(undefined),0px) !important;
  opacity: 0;
}

.emotion-0[data-enter] {
  -webkit-transform: translate3d(undefined,undefined,0px) scale(1) !important;
  -ms-transform: translate3d(undefined,undefined,0px) scale(1) !important;
  transform: translate3d(undefined,undefined,0px) scale(1) !important;
  opacity: 1;
}

.emotion-26 {
  min-height: 100vh;
}

.emotion-26 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-26 emotion-1 emotion-2 bb-Box bb-PageWithSidebar"
>
  <div
    class="emotion-1 emotion-2 bb-Box"
  >
    <div
      class="emotion-7 emotion-8 emotion-1 emotion-2 emotion-3 bb-PageWithSidebarSidebarCollapsedWrapper bb-Box bb-Modal bb-Drawer"
      data-dialog="true"
      hidden=""
      id="bb-id-1"
      role="dialog"
      style="display: none;"
      tabindex="-1"
    >
      <div
        class="emotion-0 emotion-1 emotion-2 emotion-3 bb-PageWithSidebarSidebarCollapsedWrapper bb-Box bb-ModalBackdrop"
        data-dialog-ref="bb-id-1"
        hidden=""
        style="display: none;"
      >
        <div />
      </div>
      <div
        class="emotion-1 emotion-2 emotion-6 bb-PageWithSidebarSidebar bb-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-20 emotion-1 emotion-2 bb-Box bb-DisclosureContent"
    id="test"
  >
    <div
      class="emotion-1 emotion-2 emotion-19 bb-PageWithSidebarSidebarExpandedWrapper bb-Box"
    >
      <div
        class="emotion-1 emotion-2 emotion-6 bb-PageWithSidebarSidebar bb-Box"
      >
        <div>
          this is a sidebar
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-1 emotion-2 emotion-25 bb-PageWithSidebarContent bb-Box"
  >
    hello world
  </div>
</div>
`;
